feat(sound) handle sound submissions + refacto tests and global code (#32)
* feat(sound) handle sound submissions + refacto tests and global code

* fix(test) not working